user-accounts: correctly selects the newly-created user

don't compare pointers, as they can be different, given they
can come from different sources. compare their UID's.

https://bugzilla.gnome.org/show_bug.cgi?id=704426